appId: fr.samuelprak.timecalendar.dev
---
- extendedWaitUntil:
    visible:
      id: "onboarding-programme-input"
    timeout: 60000
- tapOn:
    id: "onboarding-programme-input"
- inputText: "E2E Programme"
- pressKey: Enter
